finished barebones contact

--- a/index.html
+++ b/index.html
@@ -439,6 +439,10 @@
 
         </div>
 
+        <div class = "involvement">
+
+        </div>
+
         <div class="other">
             <h2 class="other-heading">
                 Other Projects.
@@ -623,16 +627,22 @@
             <hr>
 
             <p>
-                I'm looking for an internship or part-time position while I finish out my last semester at community college,
-
+                As I finish my final semester of community college, I'm planning to transition to an internship or part-time employment
+                where I can put my talents as a developer to use and acquire additional experience. I'm looking forward to hearing from you!
             </p>
 
-
+            <a href="mailto:nathanlumax@gmail.com">
+                <button class="contact_me">
+                    Let's Connect!
+                </button>
+            </a>
         </div>
 
-
-
-
+        <div class = "built">
+            <a href="https://github.com/NathanMLu">
+                Built by Nathan Lu 2021
+            </a>
+        </div>
     </div>
 </main>
 
