oops, forgot the year

--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
             <hr>
 
             <p>
-                As I finish my final semester of community college, I'm planning to transition to an internship or part-time employment
+                As I finish my final semester of community college, I'm planning to transition to an internship or part-time position
                 where I can put my talents as a developer to use and acquire additional experience. I'm looking forward to hearing from you!
             </p>
 
@@ -640,7 +640,7 @@
 
         <div class = "built">
             <a href="https://github.com/NathanMLu">
-                Built by Nathan Lu 2021
+                Built by Nathan Lu 2022
             </a>
         </div>
     </div>
