removed less relevant skills

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                 <a class="contact" href="/">
                     Contact.
                 </a>
+
+                <a class="resume" href="https://drive.google.com/file/d/194SxM624KGjClJmeDptKsThx86SfUWGv/view?usp=sharing" rel="noopener noreferrer" target="_blank">
+                    Resume.
+                </a>
             </div>
 
             <label class="switch">
@@ -80,7 +84,7 @@
                         Austin, Texas.
                     </span>
                     My journey with code began when I decided to automate my electronics
-                    <a href="https://www.ebay.com/usr/tech4all_official">
+                    <a href="https://www.ebay.com/usr/tech4all_official" rel="noopener noreferrer" target="_blank">
                         resale business
                     </a>
                     because manually entering sales and looking for new products was becoming too time-consuming.
@@ -89,12 +93,12 @@
 
                     My love of learning has led me to work with many aspects of software development, but I've had
                     the most experience in machine learning, web & app development, and scripting. As a full-time
-                    <a href="https://www.austincc.edu/">
+                    <a href="https://www.austincc.edu/" rel="noopener noreferrer" target="_blank">
                         student,
                     </a>
                     I keep myself occupied with personal and group projects, as well as positions of leadership in
                     various
-                    <a href="https://austincc.campuslabs.com/engage/organization/acc_csso">
+                    <a href="https://austincc.campuslabs.com/engage/organization/acc_csso" rel="noopener noreferrer" target="_blank">
                         clubs.
                     </a>
 
@@ -102,7 +106,7 @@
 
                     I'm the type of person who doesn't give up, and wants to do the very best in every aspect. With
                     my experience in contract-based projects, as well as a number of group projects during
-                    <a href="https://devpost.com/nathanlumax">
+                    <a href="https://devpost.com/nathanlumax" rel="noopener noreferrer" target="_blank">
                         hackathons,
                     </a>
                     I'm looking for an internship or part-time position to utilize my experience and
@@ -116,6 +120,16 @@
                     </div>
                 </div>
             </div>
+            <details>
+                <summary class = "contact_me" id = "more-button">More</summary>
+                <p class = "extra">
+                    When I'm not coding, some of my responsibilities include:
+                    <ul>
+                        <li>President of the Computer Science Student Organization</li>
+
+                    </ul>
+                </p>
+            </details>
         </div>
 
         <div class="skills">
@@ -128,7 +142,7 @@
             <div class="container">
                 <span class="languages" id="java">
                     <img src="resources/logos/java.svg" alt="java">
-                    <span class="text">Golang</span>
+                    <span class="text">Java</span>
                 </span>
                 <span class="languages" id="cpp">
                     <img src="resources/logos/cpp.svg" alt="cpp">
@@ -162,10 +176,6 @@
                     <img src="resources/logos/c.svg" alt="c">
                     <span class="text">C</span>
                 </span>
-                <span class="languages" id="golang">
-                    <img src="resources/logos/golang.svg" alt="golang">
-                    <span class="text">Golang</span>
-                </span>
 
                 <span class="technologies" id="nodejs">
                     <img src="resources/logos/nodejs.svg" alt="nodejs">
@@ -174,10 +184,6 @@
                 <span class="technologies" id="git">
                     <img src="resources/logos/git.svg" alt="git">
                     <span class="text">Git</span>
-                </span>
-                <span class="technologies" id="aws">
-                    <img src="resources/logos/aws.svg" alt="aws">
-                    <span class="text">Amazon Web Services</span>
                 </span>
                 <span class="technologies" id="socketio">
                     <img src="resources/logos/socketio.svg" alt="socketio">
@@ -208,18 +214,6 @@
                     <img src="resources/logos/intellij.svg" alt="intellij">
                     <span class="text">Intellij IDEA</span>
                 </span>
-                <span class="software" id="webstorm">
-                    <img src="resources/logos/webstorm.svg" alt="webstorm">
-                    <span class="text">Webstorm</span>
-                </span>
-                <span class="software" id="rider">
-                    <img src="resources/logos/rider.svg" alt="rider">
-                    <span class="text">Rider</span>
-                </span>
-                <span class="software" id="pycharm">
-                    <img src="resources/logos/pycharm.svg" alt="pycharm">
-                    <span class="text">Pycharm</span>
-                </span>
                 <span class="software" id="unity">
                     <img src="resources/logos/unity.svg" alt="unity">
                     <span class="text">Unity</span>
@@ -244,10 +238,6 @@
                     <img src="resources/logos/figma.svg" alt="figma">
                     <span class="text">Figma</span>
                 </span>
-                <span class="software" id="mysql">
-                    <img src="resources/logos/mysql.svg" alt="mysql">
-                    <span class="text">MySQL</span>
-                </span>
             </div>
         </div>
 
@@ -267,8 +257,7 @@
                     <div class="project-content">
                         <p class="project-over"> My First Hackathon Win! </p>
                         <h3 class="project-title">
-                            <a href="https://devpost.com/software/liquidoverlay" rel="noopener noreferrer"
-                               target="_blank">
+                            <a href="https://devpost.com/software/liquidoverlay" rel="noopener noreferrer" target="_blank">
                                 Liquid Overlay
                             </a>
                         </h3>
@@ -290,8 +279,7 @@
                             <li>Google Voice API</li>
                         </ul>
                         <div class="project-links">
-                            <a href="https://github.com/camdenorrb/LiquidOverlay" rel="noopener noreferrer"
-                               target="_blank">
+                            <a href="https://github.com/camdenorrb/LiquidOverlay" rel="noopener noreferrer" target="_blank">
                                 <img src="resources/logos/github.svg" alt="Github Link to Liquid Overlay">
                             </a>
 
@@ -300,8 +288,7 @@
                                      alt="Youtube Link to Liquid Overlay">
                             </a>
 
-                            <a href="https://liquidhacks2021.devpost.com/project-gallery" rel="noopener noreferrer"
-                               target="_blank">
+                            <a href="https://liquidhacks2021.devpost.com/project-gallery" rel="noopener noreferrer" target="_blank">
                                 <img src="resources/logos/devpost.svg" alt="Youtube Link to Liquid Overlay">
                             </a>
                         </div>
@@ -309,16 +296,14 @@
                 </li>
                 <li class="proj-other">
                     <div class="project-image">
-                        <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2"
-                           rel="noopener noreferrer" target="_blank">
+                        <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2" rel="noopener noreferrer" target="_blank">
                             <img src="resources/imgs/proj-two.png" alt="Liquid Overlay Image">
                         </a>
                     </div>
                     <div class="project-content">
                         <p class="project-over"> A Smartwatch App! </p>
                         <h3 class="project-title">
-                            <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2"
-                               rel="noopener noreferrer" target="_blank">
+                            <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2" rel="noopener noreferrer" target="_blank">
                                 Smilio
                             </a>
                         </h3>
@@ -343,8 +328,7 @@
                                 <img src="resources/logos/github.svg" alt="Github Link to Liquid Overlay">
                             </a>
 
-                            <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2"
-                               rel="noopener noreferrer" target="_blank">
+                            <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2" rel="noopener noreferrer" target="_blank">
                                 <img src="resources/logos/fitbitt.svg" alt="Fitbit Store Link to Liquid Overlay">
                             </a>
                         </div>
@@ -395,8 +379,7 @@
                 </li>
                 <li class="proj-other">
                     <div class="project-image">
-                        <a href="https://nathanmlu.itch.io/toilet-roll"
-                           rel="noopener noreferrer" target="_blank">
+                        <a href="https://nathanmlu.itch.io/toilet-roll" rel="noopener noreferrer" target="_blank">
                             <img src="resources/imgs/proj-three.PNG" alt="Toilet Roll Image">
                         </a>
                     </div>
@@ -423,8 +406,7 @@
                             <li>Sockets</li>
                         </ul>
                         <div class="project-links">
-                            <a href="https://github.com/NathanMLu/Toilet-Roll" rel="noopener noreferrer"
-                               target="_blank">
+                            <a href="https://github.com/NathanMLu/Toilet-Roll" rel="noopener noreferrer" target="_blank">
                                 <img src="resources/logos/github.svg" alt="Github Link to Liquid Overlay">
                             </a>
 
@@ -436,10 +418,6 @@
                 </li>
             </ul>
 
-
-        </div>
-
-        <div class = "involvement">
 
         </div>
 
@@ -606,7 +584,8 @@
                             Basic Web Browser
                         </h4>
                         <p>
-                            A basic way to browse the internet, without the other distractions, while keeping the basics any web browser may have.
+                            A basic way to browse the internet, without the other distractions, while keeping the basics
+                            any web browser may have.
                         </p>
 
                         <ul>
@@ -620,27 +599,29 @@
             </div>
         </div>
 
-        <div class = "contact">
+        <div class="contact">
             <h2 class="contact-heading">
                 Contact Me.
             </h2>
             <hr>
 
             <p>
-                As I finish my final semester of community college, I'm planning to transition to an internship or part-time position
-                where I can put my talents as a developer to use and acquire additional experience. I'm looking forward to hearing from you!
+                As I finish my final semester of community college, I'm planning to transition to an internship or
+                part-time position
+                where I can put my skills as a developer to use and acquire additional experience. I'm looking forward
+                to hearing from you!
             </p>
 
-            <a href="mailto:nathanlumax@gmail.com">
+            <a href="mailto:nathanlumax@gmail.com" rel="noopener noreferrer" target="_blank">
                 <button class="contact_me">
                     Let's Connect!
                 </button>
             </a>
         </div>
 
-        <div class = "built">
-            <a href="https://github.com/NathanMLu">
-                Built by Nathan Lu 2022
+        <div class="built">
+            <a href="https://github.com/NathanMLu" rel="noopener noreferrer" target="_blank">
+                Built by Nathan Lu
             </a>
         </div>
     </div>
