added socials links

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                 </span>
 
 
-                <a id="resume" href="https://drive.google.com/file/d/194SxM624KGjClJmeDptKsThx86SfUWGv/view?usp=sharing" rel="noopener noreferrer" target="_blank">
+                <a id="resume" href="https://drive.google.com/file/d/194SxM624KGjClJmeDptKsThx86SfUWGv/view?usp=sharing"
+                   rel="noopener noreferrer" target="_blank">
                     <span>
                         Resume.
                     </span>
@@ -103,7 +104,8 @@
                     </a>
                     I keep myself occupied with personal and group projects, as well as positions of leadership in
                     various
-                    <a href="https://austincc.campuslabs.com/engage/organization/acc_csso" rel="noopener noreferrer" target="_blank">
+                    <a href="https://austincc.campuslabs.com/engage/organization/acc_csso" rel="noopener noreferrer"
+                       target="_blank">
                         clubs.
                     </a>
 
@@ -252,7 +254,8 @@
                     <div class="project-content">
                         <p class="project-over"> My First Hackathon Win! </p>
                         <h3 class="project-title">
-                            <a href="https://devpost.com/software/liquidoverlay" rel="noopener noreferrer" target="_blank">
+                            <a href="https://devpost.com/software/liquidoverlay" rel="noopener noreferrer"
+                               target="_blank">
                                 Liquid Overlay
                             </a>
                         </h3>
@@ -274,7 +277,8 @@
                             <li>Google Voice API</li>
                         </ul>
                         <div class="project-links">
-                            <a href="https://github.com/camdenorrb/LiquidOverlay" rel="noopener noreferrer" target="_blank">
+                            <a href="https://github.com/camdenorrb/LiquidOverlay" rel="noopener noreferrer"
+                               target="_blank">
                                 <img src="resources/logos/github.svg" alt="Github Link to Liquid Overlay">
                             </a>
 
@@ -283,7 +287,8 @@
                                      alt="Youtube Link to Liquid Overlay">
                             </a>
 
-                            <a href="https://liquidhacks2021.devpost.com/project-gallery" rel="noopener noreferrer" target="_blank">
+                            <a href="https://liquidhacks2021.devpost.com/project-gallery" rel="noopener noreferrer"
+                               target="_blank">
                                 <img src="resources/logos/devpost.svg" alt="Youtube Link to Liquid Overlay">
                             </a>
                         </div>
@@ -291,14 +296,16 @@
                 </li>
                 <li class="proj-other">
                     <div class="project-image">
-                        <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2" rel="noopener noreferrer" target="_blank">
+                        <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2"
+                           rel="noopener noreferrer" target="_blank">
                             <img src="resources/imgs/proj-two.png" alt="Liquid Overlay Image">
                         </a>
                     </div>
                     <div class="project-content">
                         <p class="project-over"> A Smartwatch App! </p>
                         <h3 class="project-title">
-                            <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2" rel="noopener noreferrer" target="_blank">
+                            <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2"
+                               rel="noopener noreferrer" target="_blank">
                                 Smilio
                             </a>
                         </h3>
@@ -323,7 +330,8 @@
                                 <img src="resources/logos/github.svg" alt="Github Link to Liquid Overlay">
                             </a>
 
-                            <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2" rel="noopener noreferrer" target="_blank">
+                            <a href="https://gallery.fitbit.com/details/9e846e9a-151c-45c2-90a5-a124e084b6e2"
+                               rel="noopener noreferrer" target="_blank">
                                 <img src="resources/logos/fitbitt.svg" alt="Fitbit Store Link to Liquid Overlay">
                             </a>
                         </div>
@@ -401,7 +409,8 @@
                             <li>Sockets</li>
                         </ul>
                         <div class="project-links">
-                            <a href="https://github.com/NathanMLu/Toilet-Roll" rel="noopener noreferrer" target="_blank">
+                            <a href="https://github.com/NathanMLu/Toilet-Roll" rel="noopener noreferrer"
+                               target="_blank">
                                 <img src="resources/logos/github.svg" alt="Github Link to Liquid Overlay">
                             </a>
 
@@ -612,6 +621,22 @@
                     Let's Connect!
                 </button>
             </a>
+
+            <div class = "socials">
+                <ul>
+                    <li>
+                        <a href="https://github.com/NathanMLu" rel="noopener noreferrer" target="_blank">
+                            <img src="resources/logos/github.svg" alt="Nathan Lu Github">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.linkedin.com/in/nathanlumax/" rel="noopener noreferrer" target="_blank">
+                            <img src="resources/logos/linkedin.svg" alt="Nathan Lu Linkedin">
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <div class="built">
@@ -619,6 +644,7 @@
                 Built by Nathan Lu
             </a>
         </div>
+
     </div>
 </main>
 
