--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
 
         <div class="built">
             <a href="https://github.com/NathanMLu" rel="noopener noreferrer" target="_blank">
-                Built by Nathan Lu
+                Built by © 2022 Nathan Lu
             </a>
         </div>
 
