--- a/index.html
+++ b/index.html
@@ -126,6 +126,18 @@
                         <img src="/resources/imgs/pfp.png" alt="Nate Lu" class="pfp">
                     </div>
                 </div>
+
+                <div class = "iam">
+                    <h3>Some of my roles: </h3>
+                    <ul>
+                        <li>President of Computer Science Club at ACC</li>
+                        <li>Owner of Tech4All Electronics</li>
+                        <li>Vice President of Phi Theta Kappa Round Rock</li>
+                        <li>Media Producer at ACCENT Student News</li>
+                        <li>Keyboardist and Bassist at Oasis Church</li>
+                        <li>World's Youngest Drone Cartographer</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
