change text on scroll up down, started styling

--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
             <button class="contact_me">
                 Contact Me!
             </button>
+
+
+        </div>
+
+        <div class="scroll-down">
+            <p>
+                SCROLL DOWN
+            </p>
         </div>
 
         <div class="about">
@@ -127,7 +135,7 @@
                     </div>
                 </div>
 
-                <div class = "iam">
+                <div class="iam">
                     <h3>Some of my roles: </h3>
                     <ul>
                         <li>President of Computer Science Club at ACC</li>
@@ -622,7 +630,7 @@
             <hr>
 
             <p>
-                As I finish my final semester of community college, I'm planning to transition to an internship or
+                As I finish my final semester of college, I'm planning to transition to an internship or
                 part-time position
                 where I can put my skills as a developer to use and acquire additional experience. I'm looking forward
                 to hearing from you!
@@ -634,7 +642,7 @@
                 </button>
             </a>
 
-            <div class = "socials">
+            <div class="socials">
                 <ul>
                     <li>
                         <a href="https://github.com/NathanMLu" rel="noopener noreferrer" target="_blank">
