--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <a href="https://devpost.com/nathanlumax" rel="noopener noreferrer" target="_blank">
                         hackathons,
                     </a>
-                    I'm looking for an internship or part-time position to utilize my experience and
+                    I'm looking for an internship or entry-level position to utilize my experience and
                     expand my knowledge.
                 </p>
 
@@ -669,7 +669,7 @@
 
             <p>
                 As I finish my final semester of college, I'm planning to transition to an internship or
-                part-time position
+                entry-level position
                 where I can put my skills as a developer to use and acquire additional experience. I'm looking forward
                 to hearing from you!
             </p>
