--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
+    <meta property="og:title" content="My Portfolio" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://natelu.me/" />
+    <meta property="og:image" content="https://natelu.me/favicon.png" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg"/>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
