--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta property="og:title" content="My Portfolio" />
+    <meta property="og:title" content="Nate Lu - Software Engineer" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://natelu.me/" />
     <meta property="og:image" content="https://natelu.me/favicon.png" />
